--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 
     <body>
         <nav class="navbar">
-            <h1>Studi<span>on</span><span>Eventos</span></h1>
+            <h1 class="logo-studion">
+                Studi<span class="copy--primary">on</span><span class="logo-studion__subtitle">Eventos</span>
+            </h1>
             <ul class="navbar__links">
                 <li>
                     <a href="#empresa">
@@ -85,7 +87,7 @@
             <ul>
                 <li><a href="https://facebook.com/" target="_blank">Facebook</a></li>
                 <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-                <li><a href="https://youtube.com/">Youtube</a></li>
+                <li><a href="https://youtube.com" target="_blank">Youtube</a></li>
             </ul>
             <hr />
             <p>
