--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="#eventos">
+                        Eventos
+                    </a>
+                </li>
+                <li>
                     <a href="#galeria">
                         Galeria
                     </a>
@@ -39,14 +44,19 @@
         <header>
             <div id="slider">
                 <div class="slide">
-                    <h6><span>Próximo evento</span> - Dia 25 de setembro às 19h</h6>
-                    <h2><span>Creative</span> Minds</h2>
-                    <button>Saiba Mais</button>
+                    <img 
+                    class="slide__background-image" 
+                    src="./images/banner.jpg" 
+                    alt="Studion Banner"
+                    />
+                    <div class="slide__copy">
+                        <h6><span class="copy--primary">Próximo evento</span> - Dia 25 de setembro às 19h</h6>
+                        <h2><span class="copy--primary">Creative</span> Minds</h2>
+                        <button class="btn btn--slide">Saiba Mais</button>
+                    </div>
                 </div>
-
             </div>
         </header>
-
         <main>
             <section>
                 <ul>
