--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,21 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Studion</title>
     </head>
 
     <body>
-        <nav class="navbar">
-            <h1 class="logo-studion">
-                Studi<span class="copy--primary">on</span><span class="logo-studion__subtitle">Eventos</span>
+        <nav>
+            <h1>
+                Studi<span class="accent">on</span>
+                <span class="subtitle">Eventos</span>
             </h1>
-            <ul class="navbar__links">
+            <ul>
                 <li>
-                    <a href="#empresa">
+                    <a href="#" class="selected">
                         Empresa
                     </a>
                 </li>
@@ -42,63 +46,54 @@
         </nav>
 
         <header>
-            <div id="slider">
-                <div class="slide">
-                    <img 
-                    class="slide__background-image" 
-                    src="./images/banner.jpg" 
-                    alt="Studion Banner"
-                    />
-                    <div class="slide__copy">
-                        <h6><span class="copy--primary">Próximo evento</span> - Dia 25 de setembro às 19h</h6>
-                        <h2><span class="copy--primary">Creative</span> Minds</h2>
-                        <button class="btn btn--slide">Saiba Mais</button>
-                    </div>
-                </div>
-            </div>
+            <h2>.empresa</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptates asperiores explicabo magni sed nemo, quas, 
+                    cumque doloribus quisquam sit corporis.</p>  
         </header>
         <main>
-            <section>
-                <ul>
-                    <li><h3>+ de 500 </h3>eventos realizados</li>
-                    <li><h3>+ de 1,000,000 </h3>de infressos vendidos</li>
-                    <li><h3>+de 300 </h3>empresas atendidas</li>
-                </ul>
-
-            </section>
-
-            <section>
+            <section class="section1">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                <p class="paragrafo1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non placeat recusandae dicta sint omnis molestiae cupiditate labore.</p>
+                <p class="paragrafo2">temporibus amet fugit reprehenderit delectus, laboriosam illo suscipit consectetur veniam quas ipsam rem.</p>
                 <div>
-                    <img src="./images/institutional.jpg">
-                    <h6>Fazemos o seu evento acontecer</h6>
-                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error doloremque at praesentium inventore, architecto recusandae pariatur, non minus, sapiente laudantium incidunt ipsam molestiae perferendis! Voluptate quod dignissimos saepe nemo ipsam.</p>
-                    <button>Saiba Mais</button>
+                <img src="./images/pessoa.png" alt="pessoa falando ao celular" class="pessoa"/>
                 </div>
             </section>
-            <section>
-                <div>
-                    <h6>
-                        Você informa a temática e nós planejamos um evento com tecnologia e 
-                    </h6>
-                    <h2><span>Muito+ </span>Diversão</h2>
-                    <button>Fazer cotação</button>
-                </div>
+            <section class="section2">
+                <h4>Quem confia no nosso trabalho</h4>
+                <img src="./images/logos.png" alt="logos de empresas parceiras"/>
             </section>
+            <section class="section3">
+                <img src="./images/video.jpeg" alt="pessoa sentada na sacada de um predio olhando a vista"/>
+            </section>
+
+           
         </main>
         
         <footer>
-            <h2>Studi<span>on</span><span>Eventos</span></h2>
-            <form>
-                <label>receba news e promoçoões</label>
-                <input type="email" placeholder="email" />
-                <button type="submit">Enviar</button>
-            </form>
-            <ul>
-                <li><a href="https://facebook.com/" target="_blank">Facebook</a></li>
-                <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-                <li><a href="https://youtube.com" target="_blank">Youtube</a></li>
-            </ul>
+            <div>
+                <h2> Studi<span class="accent">on</span>
+                    <span class="subtitle">Eventos</span>
+                </h2>
+                <form>
+                    <label>receba news e promoçoões</label>
+                    <input type="email" placeholder="email" />
+                    <button type="submit">
+                        <img src="./images/icons/send2.svg" alt="enviar">
+                    </button>
+                </form>
+                <ul>
+                    <li><a href="https://facebook.com/" target="_blank">
+                        <img src="./images/icons/facebook.svg" alt="facebook">
+                    </a></li>
+                    <li><a href="https://whatsapp.com" target="_blank">
+                        <img src="./images/icons/whatsapp.svg" alt="whatsapp">
+                    </a></li>
+                    <li><a href="https://youtube.com" target="_blank">
+                        <img src="./images/icons/youtube.svg" alt="youtube">
+                    </a></li>
+                </ul>
+            </div>
             <hr />
             <p>
                 <small>Studi<span>ON</span> - Todos os direitos reservados.</small>
