--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./CSS/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=block" rel="stylesheet">
+    
     <title>Studion</title>
     </head>
 
@@ -52,9 +54,13 @@
         </header>
         <main>
             <section class="section1">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                <p class="paragrafo1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non placeat recusandae dicta sint omnis molestiae cupiditate labore.</p>
-                <p class="paragrafo2">temporibus amet fugit reprehenderit delectus, laboriosam illo suscipit consectetur veniam quas ipsam rem.</p>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <small>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non placeat recusandae dicta sint omnis molestiae cupiditate labore.
+                        <br><br>
+                    temporibus amet fugit reprehenderit delectus, laboriosam illo suscipit consectetur veniam quas ipsam rem.
+                </small>
+                </h4>
                 <div>
                 <img src="./images/pessoa.png" alt="pessoa falando ao celular" class="pessoa"/>
                 </div>
